# Boltr

./: .gitignore  Boltr_Boltz_bootstrap  Boltr_go  Cargo.toml  DEVELOPMENT.md  HTGAA_Aim1.md  Makefile  QUICKSTART.md  README.md  TODO.md  vybrid_todo.md
.cargo/: config.toml
boltr-backend-tch/: Cargo.toml
boltr-backend-tch/src/: attention.rs  boltz_hparams.rs  checkpoint.rs  device.rs  equivariance.rs  inference_keys.rs  layers.rs  lib.rs  model.rs  predict_args.rs  tch_compat.rs
boltr-backend-tch/src/attention/: mod.rs  pair_bias.rs
boltr-backend-tch/src/boltz2/: affinity.rs  atom_window_keys.rs  confidence.rs  confidence_utils.rs  contact_conditioning.rs  diffusion.rs  diffusion_conditioning.rs  diffusion_geometry.rs  distogram.rs  encoders.rs  featurizer_bridge.rs  input_embedder.rs  mod.rs  model.rs  msa_module.rs  relative_position.rs  steering.rs  tch_compat.rs  template_module.rs  template_module.rs.bak  transformers.rs  trunk.rs
boltr-backend-tch/src/boltz2/potentials/: compute.rs  consts.rs  feats.rs  mod.rs  registry.rs  schedules.rs
boltr-backend-tch/src/layers/: mod.rs  outer_product_mean.rs  outer_product_mean_msa.rs  pair_weighted_averaging.rs  pairformer.rs  pairformer_no_seq.rs  training_tests.rs  transition.rs  triangular_attention.rs  triangular_mult.rs
boltr-backend-tch/tests/: atom_transformer_window_w_ne_h.rs  collate_predict_trunk.rs  embedder_trunk_predict.rs  input_embedder_golden.rs  msa_module_golden.rs  pairformer_golden.rs  predict_step_smoke.rs  template_diffusion_goldens.rs  trunk_init_golden.rs
boltr-backend-tch/tests/fixtures/: README.md
boltr-backend-tch/tests/fixtures/hparams/: README.md
boltr-backend-tch/tests/fixtures/input_embedder_golden/: README.md
boltr-backend-tch/tests/fixtures/msa_module_golden/: README.md  msa_module_golden.safetensors
boltr-backend-tch/tests/fixtures/pairformer_golden/: README.md  pairformer_layer_golden.safetensors
boltr-cli/: Cargo.toml  build.rs
boltr-cli/src/: cli_banner.txt  collate_predict_bridge.rs  cuda_mem.rs  device_resolve.rs  doctor.rs  gpu_mem.rs  main.rs  predict_tch.rs  preprocess_cmd.rs
boltr-cli/tests/: common.rs  msa_to_npz_cli.rs  predict_cli.rs  predict_smoke.rs  tokens_to_npz_cli.rs
boltr-io/: Cargo.toml  tail
boltr-io/data/: ambiguous_atoms.json
boltr-io/src/: a3m.rs  ambiguous_atoms.rs  boltz_const.rs  ccd.rs  collate_golden.rs  collate_pad.rs  config.rs  download.rs  feature_batch.rs  fixtures.rs  format.rs  inference_collate_serialize.rs  inference_dataset.rs  lib.rs  ligand_exclusion.rs  msa.rs  msa_csv.rs  msa_npz.rs  pad.rs  parser.rs  ref_atoms.rs  residue_constraints.rs  structure_v2.rs  structure_v2_npz.rs  structure_v2_npz_tests_placeholder.rs  token_npz.rs  token_v2_numpy.rs  vdw_radii.rs
boltr-io/src/featurizer/: atom_features_golden.rs  crop_affinity.rs  dummy_templates.rs  mod.rs  msa_features_golden.rs  msa_pairing.rs  multi_conformer.rs  process_atom_features.rs  process_ensemble_features.rs  process_msa_features.rs  process_residue_constraint_features.rs  process_symmetry_features.rs  process_template_features.rs  process_token_features.rs  token.rs  token_features_golden.rs
boltr-io/src/preprocess/: bundle.rs  mod.rs  native.rs  paths.rs
boltr-io/src/qc/: geometry.rs  mod.rs  protein.rs  relax.rs  report.rs  validate.rs
boltr-io/src/tokenize/: boltz2.rs  mod.rs
boltr-io/src/write/: affinity_writer.rs  mmcif.rs  mod.rs  pdb.rs  prediction_npz.rs  writer.rs
boltr-io/tests/: collate_golden_fixture.rs  full_collate_golden.rs  integration_smoke.rs  load_input_dataset.rs  post_collate_golden.rs  preprocess_bundle.rs  yaml_parse.rs
boltr-io/tests/fixtures/: 0.npz  README.md  manifest.json  minimal_protein.npz  structure_v2_numpy_packed_ala.npz
boltr-io/tests/fixtures/collate_golden/: README.md  ala_structure_v2.npz  atom_features_ala_golden.safetensors  collate_two_msa_golden.safetensors  manifest.json  token_features_ala_collated_golden.safetensors  token_features_ala_golden.safetensors  trunk_smoke_collate.safetensors
boltr-io/tests/fixtures/load_input_smoke/: 0.npz  README.md  manifest.json  msa_features_load_input_smoke_golden.safetensors
boltr-io/tests/fixtures/yaml/: constraints_bond.yaml  constraints_contact.yaml  constraints_mixed.yaml  constraints_pocket.yaml  cyclic_protein.yaml  dna_entity.yaml  full_schema.yaml  ligand_ccd_multi.yaml  ligand_ccd_single.yaml  ligand_smiles.yaml  minimal_protein_only.yaml  modifications.yaml  multi_chain_entity.yaml  multi_entity.yaml  properties_affinity.yaml  protein_msa.yaml  rna_entity.yaml  template_cif.yaml  template_pdb.yaml  version_field.yaml
boltr-web/: Cargo.toml  README.md
boltr-web/assets/: index.html
boltr-web/src/: main.rs  paths.rs  predict_job.rs  prereq.rs  runpod.rs
boltz-reference/: README.md  pyproject.toml
docs/: EXTRA_MOLS_PICKLE.md  NATIVE_PREPROCESS_ROADMAP.md  NUMERICAL_TOLERANCES.md  PAIRFORMER_BUILD_SUMMARY.md  PAIRFORMER_DROPOUT_FIX.md  PAIRFORMER_IMPLEMENTATION.md  PAIRFORMER_REVIEW.md  PAIRFORMER_TRUNKV2_REVIEW.md  PREDICTION_PARITY_BASELINE.md  PREPROCESS_NATIVE.md  PROJECT_README.md  PYTHON_REMOVAL.md  SECTION_45_PROGRESS.md  TENSOR_CONTRACT.md  TESTING_STRATEGY.md  TRUNKV2_INTEGRATION.md  TRUNKV2_OWNED_API.md  activity.md  folding-prediction-assessment.md  predict-preprocess-extras.md  step-1-1-progress.md  step-1-2-implementation-guide.md  step-1-2-progress.md
scripts/: README.md  boltr-menu.sh  boltz-gpu  boltz_gpu_wrapper.py  bootstrap_boltz_gpu_venv.sh  bootstrap_dev_venv.sh  bootstrap_webui_env.sh  build-boltr-cli-release.sh  cargo-tch  check_tch_prereqs.sh  compare_ckpt_safetensors_counts.py  dump_atom_features_golden.py  dump_collate_golden.py  dump_collate_two_example_golden.py  dump_full_collate_golden.py  dump_msa_features_golden.py  dump_token_features_ala_golden.py  ensure_openssl_build_deps.sh  env_libtorch_cuda.sh  export_checkpoint_to_safetensors.py  export_hparams_from_ckpt.py  export_input_embedder_golden.py  export_msa_module_golden.py  export_pairformer_golden.py  export_trunk_init_golden.py  gen_ambiguous_atoms_json.py  (+9 more)
(+10 files in other folders)
