[workspace]
resolver = "2"
members = [
    "boltr-cli",
    "boltr-io",
    "boltr-backend-tch",
    "boltr-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SampleBias"]
license = "MIT"
repository = "https://github.com/SampleBias/Boltr"

[workspace.dependencies]
# Core dependencies
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"

# IO dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
safetensors = "0.4"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
rand = "0.8"
numpy = "0.20"
itertools = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
