[package]
name = "boltr-backend-tch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tch-backend = ["tch"]

[dependencies]
tch = { version = "0.16", optional = true }
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
safetensors.workspace = true

[dev-dependencies]
tempfile = "3"

[[test]]
name = "msa_module_golden"
required-features = ["tch-backend"]

[[test]]
name = "pairformer_golden"
required-features = ["tch-backend"]

[[bin]]
name = "gen_boltz2_smoke_safetensors"
path = "src/bin/gen_boltz2_smoke_safetensors.rs"
required-features = ["tch-backend"]

[[bin]]
name = "verify_boltz2_safetensors"
path = "src/bin/verify_boltz2_safetensors.rs"
required-features = ["tch-backend"]
