[package]
name = "boltr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "boltr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
boltr-io = { path = "../boltr-io" }
boltr-backend-tch = { path = "../boltr-backend-tch", optional = true }
dirs.workspace = true

[features]
# Enable `tch` for LibTorch-backed inference (requires LIBTORCH or LIBTORCH_USE_PYTORCH=1).
default = []
tch = ["boltr-backend-tch/tch-backend"]

[dev-dependencies]
tempfile = "3"
