[package]
name = "boltr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "boltr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ndarray.workspace = true
boltr-io = { path = "../boltr-io" }
boltr-backend-tch = { path = "../boltr-backend-tch", optional = true }
tch = { version = "0.16", optional = true, features = ["download-libtorch"] }
dirs.workspace = true
which = "6"

[features]
# Enable `tch` for LibTorch-backed inference. By default `torch-sys` downloads a matching CPU
# LibTorch (`download-libtorch`). For CUDA or to compile against your pip `torch`, use
# `scripts/cargo-tch` / `LIBTORCH_USE_PYTORCH=1` or set `LIBTORCH` — see README.
default = []
tch = ["boltr-backend-tch/tch-backend", "dep:tch"]

[dev-dependencies]
tempfile = "3"
