[package]
name = "boltr-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ndarray.workspace = true
flate2.workspace = true
tar.workspace = true
rand.workspace = true
