[package]
name = "boltr-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ndarray.workspace = true
flate2.workspace = true
tar.workspace = true
rand.workspace = true
csv = "1.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[[bin]]
name = "msa_npz_golden"
path = "src/bin/msa_npz_golden.rs"
