[package]
name = "boltr-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# rustdoc doctests write argument files under `$TMPDIR`; on quota-limited `/tmp` this can fail with
# Os error 122 (QuotaExceeded) even when `cargo test --lib` succeeds. Integration tests keep coverage
# for the former module-level ` ```rust` example in `config.rs`.
[lib]
doctest = false

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ndarray.workspace = true
flate2.workspace = true
tar.workspace = true
rand.workspace = true
itertools.workspace = true
csv = "1.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
safetensors.workspace = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "msa_npz_golden"
path = "src/bin/msa_npz_golden.rs"

[[bin]]
name = "write_collate_golden"
path = "src/bin/write_collate_golden.rs"

[[bin]]
name = "write_token_features_ala_golden"
path = "src/bin/write_token_features_ala_golden.rs"

[[bin]]
name = "write_trunk_collate_from_fixture"
path = "src/bin/write_trunk_collate_from_fixture.rs"
